--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </papertitle>
 		 </a>
           <br>
-		<strong> YiDong Guo </strong>, Yue Ma, YaoPei Li
+		<strong> YiDong Guo </strong>, Yue Ma, PeiYao Li
 		</br>
 		  《航空学报》
           <p></p>
