--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <p>I am a post-graduate student from NWPU majoring in solid mechanics.
               </p>
               <p>
-				I have interest in Robotics.
+				I have interest in Robotics and machine learning.
                 I received my M.Eng. in Solid mechanics from NWPU in 2022 and my B.Eng. in aircraft designing and engineering from NWPU in 2019.
               </p>
               <p style="text-align:center">
